--- a/packages/keystone/graphiql/graphiql.html
+++ b/packages/keystone/graphiql/graphiql.html
@@ -5,28 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playground - __REPLACE_TO_YOUR_SERVER_URL__</title>
     <link rel="stylesheet" href="https://unpkg.com/graphiql/graphiql.min.css" />
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/graphiql/graphiql.min.js" type="application/javascript"></script>
 </head>
-<body style="margin: 0;">
-<div id="graphiql" style="height: 100vh;"></div>
-<script crossorigin src="https://unpkg.com/react/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/graphiql/graphiql.min.js"></script>
+
+<body style="height: 100%;width: 100%;margin: 0;overflow: hidden;">
+<div id="graphiql" style="height: 100vh;">Loading playground...</div>
 <script>
     const apiPath = '__REPLACE_TO_YOUR_API_PATH__'
-    const graphQLFetcher = async (graphQLParams) =>
+    const graphQLFetcher = async (graphQLParams, { headers }) =>
         fetch(apiPath, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
+                ...headers,
             },
             credentials: 'omit',
             body: JSON.stringify(graphQLParams),
-        }).then((response) => response.json());
+        }).then((response) => response.json())
 
     ReactDOM.render(
-        React.createElement(GraphiQL, { fetcher: graphQLFetcher }),
+        React.createElement(GraphiQL, {
+            fetcher: graphQLFetcher,
+        }),
         document.getElementById('graphiql'),
-    );
+    )
 </script>
 </body>
 </html>
