--- a/packages/keystone/graphiql/graphiql.html
+++ b/packages/keystone/graphiql/graphiql.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playground - __REPLACE_TO_YOUR_SERVER_URL__</title>
+    <title>Playground - {{ serverUrl }}</title>
     <link rel="stylesheet" href="https://unpkg.com/graphiql@3.8.3/graphiql.min.css" />
     <script crossorigin src="https://unpkg.com/react@18.3.1/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.production.min.js"></script>
@@ -13,7 +13,7 @@
 <body style="height: 100%;width: 100%;margin: 0;overflow: hidden;">
 <div id="graphiql" style="height: 100vh;">Loading playground...</div>
 <script>
-    const apiPath = '__REPLACE_TO_YOUR_API_PATH__'
+    const apiPath = '{{ apiPath }}'
     const graphQLFetcher = async (graphQLParams, { headers }) =>
         fetch(apiPath, {
             method: 'POST',
